iter1  предварительный результат
